# python-fast-api-test

./: .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml  run.sh  run_compose.sh
.github/workflows/: ci.yaml
garbish_code/: ___compose.yml
src/: database.py  main.py  models.py
