[project]
name = "my-fast-api-proj-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi-cli>=0.0.5",
    "fastapi[standard]>=0.112.2",
    "typing>=3.10.0.0",
    "uvicorn>=0.30.6",
]

[tool.hatch.metadata]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "src.main:hello"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "fastapi-cli>=0.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
