[project]
name = "my-fast-api-proj-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi-cli>=0.0.5",
    "fastapi[standard]>=0.112.2",
    "pydantic>=2.8.2",
    "pytest>=8.3.3",
    "typing>=3.10.0.0",
    "uvicorn>=0.30.6",
]

[tool.hatch.metadata]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "src.main:hello"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "fastapi-cli>=0.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["fastapi.status"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["C","E","F","W"]
ignore = ["E501", "F401"]