[project]
name = "my-fast-api-proj-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi-cli>=0.0.5",
    "fastapi[standard]>=0.112.2",
    "logging>=0.4.9.6",
    "psycopg-pool>=3.2.4",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.8.2",
    "pytest>=8.3.3",
    "typing>=3.10.0.0",
    "uvicorn>=0.30.6",
]

[tool.hatch.metadata]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "src.main:hello"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "fastapi-cli>=0.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["fastapi.HTTPException", "fastapi.status"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501", "F401"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"
